feat: filter find by id user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/pg
+spring.datasource.username=pg-user
+spring.datasource.password=pg-password
+spring.datasource.driver-class-name=org.postgresql.Driver
